--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   </head>
 
   <body>
-    <h1>Olá, mundo!</h1>
-    <p>Este é o meu primeiro projeto Javascript.</p>
+    <h1>Contador</h1>
     <div id="counter">
-      <button name="subtrair" onclick="decrement()">-</button>
-      <span id="currentNumber">0</span>
-      <button name="adicionar" onclick="increment()">+</button>
+      <button id="subtract">-</button>
+      <span id="currentNumber"></span>
+      <button id="add">+</button>
     </div>
-  </body>
+    <div class="text">Não é possível adicionar mais.</div>
+    <div class="text2">Não é possível subtrair mais.</div>
 
-  <script src="assets/scripts/script.js"></script>
+    <script src="assets/scripts/script.js"></script>
+  </body>
 </html>
